# twink

./: CMakeLists.txt  README.md  resources.qrc
assets/: desktop.ini
lib/: CMakeLists.txt
lib/metadata/: CMakeLists.txt
lib/metadata/impl/: IParser.cpp  ISaver.cpp  TagLib.cpp
lib/metadata/include/metadata/: IParser.h  ISaver.h  TagLib.h
lib/utils/: CMakeLists.txt
lib/utils/impl/: Image.cpp  ImagePNG.cpp  Log.cpp  QtLogger.cpp  String.cpp  Utils.cpp
lib/utils/include/utils/: Image.h  ImagePNG.h  Log.h  QtLogger.h  Services.h  String.h  Utils.h
lib/utils/test/: CMakeLists.txt  string_test.cpp  utls_test.cpp
ui/: CMakeLists.txt  MetadataCreation.js  cmake_data.h.in  main.cpp
ui/impl/: ImageObject.cpp  MetadataPageHandler.cpp  MusicObject.cpp  ParsingHandler.cpp  Search.cpp  Settings.cpp  SettingsPageHandler.cpp
ui/include/ui/: ImageObject.h  MetadataPageHandler.h  MusicObject.h  ParsingHandler.h  Search.h  Settings.h  SettingsPageHandler.h
ui/qml/: CustomButton.qml  ImageButton.qml  LabelItem.qml  LeftMenu.qml  LeftMenuItem.qml  MainPage.qml  MetadataItem.qml  MetadataPage.qml  MusicItem.qml  MusicList.qml  SearchBar.qml  SettingsPage.qml  TextInputItem.qml  main.qml
